# netbox_license

./: README.md  pyproject.toml
.github/workflows/: publish.yml
license_management/: __init__.py  apps.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  plugin.py  setup.py  tables.py  template_content.py  urls.py  utils.py  views.py
license_management.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
license_management/api/: urls.py  views.py
license_management/forms/: bulk_edit.py  bulk_import.py  filtersets.py  models.py
license_management/graphql/: filters.py  schema.py  types.py
license_management/migrations/: 0001_initial.py  0002_alter_license_manufacturer_alter_license_tags_and_more.py  0002_licensemodel_alter_licensetype_license_model.py  0002_remove_license_vendor_and_more.py  0003_licensetype_base_license.py  0003_licensetype_volume_relation.py  0003_remove_licenseassignment_comment_and_more.py  0004_alter_licensetype_license_model.py  0004_rename_max_assignments_license_volume_limit_and_more.py  0005_remove_licenseassignment_assignment_type_and_more.py  0006_alter_licenseassignment_device.py  0007_rename_software_name_license_name.py  0008_license_comments_licenseassignment_comments.py  0009_rename_assignment_type_license_volume_type_and_more.py  0010_licenseassignment_virtual_machine_and_more.py  0011_licenseassignment_device_manufacturer.py  (+5 more)
netbox_license/: __init__.py  events.py  filtersets.py  models.py  tables.py  template_content.py  urls.py  utils.py
netbox_license.egg-info/: PKG-INFO  SOURCES.txt
(+56 files in other folders)
